Fix padding, spacing, borders and mobile layouts

--- a/frontend/src/@core/scss/base/_layouts.scss
+++ b/frontend/src/@core/scss/base/_layouts.scss
@@ -56,7 +56,7 @@
         #ecffff 100%
       ) !important;
       inset-block-start: 0rem;
-      padding: 1.5rem;
+      padding: 24px 24px 40px;
 
       @media (max-width: 1000px) {
         padding-top: 1rem;
